# DRF

./: .env.sample  README.md  courses_data.json  pyproject.toml  requirements.txt  users_data.json
config/: settings.py  urls.py
courses/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_lesson_link.py  0003_payment.py  0004_alter_payment_payment_date.py  0005_course_author_lesson_author.py  0006_alter_course_author_alter_lesson_author_and_more.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
